interpreter/v1/src/f.output
Useless nonterminals

   list


Terminals which are not used

   '('
   ')'


Useless rules

   17 list: '(' delimiter_spaces_all elements delimiter_spaces_all ')'


State 5 conflicts: 3 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: elements

    2 elements: /* empty */
    3         | element delimiter_spaces_all elements

    4 element: literal

    5 literal: 'a'
    6        | SF

    7 delimiter_spaces_all: /* empty */
    8                     | spaces
    9                     | tabs
   10                     | eols

   11 spaces: /* empty */
   12       | SYM_SPACE spaces

   13 tabs: /* empty */
   14     | SYM_TAB tabs

   15 eols: /* empty */
   16     | EOL eols


Terminals, with rules where they appear

$end (0) 0
'(' (40)
')' (41)
'a' (97) 5
error (256)
SF (258) 6
SYM_SPACE (259) 12
SYM_TAB (260) 14
EOL (261) 16


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
program (11)
    on left: 1, on right: 0
elements (12)
    on left: 2 3, on right: 1 3
element (13)
    on left: 4, on right: 3
literal (14)
    on left: 5 6, on right: 4
delimiter_spaces_all (15)
    on left: 7 8 9 10, on right: 3
spaces (16)
    on left: 11 12, on right: 8 12
tabs (17)
    on left: 13 14, on right: 9 14
eols (18)
    on left: 15 16, on right: 10 16


state 0

    0 $accept: . program $end
    1 program: . elements
    2 elements: .  [$end]
    3         | . element delimiter_spaces_all elements
    4 element: . literal
    5 literal: . 'a'
    6        | . SF

    SF   shift, and go to state 1
    'a'  shift, and go to state 2

    $default  reduce using rule 2 (elements)

    program   go to state 3
    elements  go to state 4
    element   go to state 5
    literal   go to state 6


state 1

    6 literal: SF .

    $default  reduce using rule 6 (literal)


state 2

    5 literal: 'a' .

    $default  reduce using rule 5 (literal)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: elements .

    $default  reduce using rule 1 (program)


state 5

    3 elements: element . delimiter_spaces_all elements
    7 delimiter_spaces_all: .  [$end, SF, 'a']
    8                     | . spaces
    9                     | . tabs
   10                     | . eols
   11 spaces: .  [$end, SF, 'a']
   12       | . SYM_SPACE spaces
   13 tabs: .  [$end, SF, 'a']
   14     | . SYM_TAB tabs
   15 eols: .  [$end, SF, 'a']
   16     | . EOL eols

    SYM_SPACE  shift, and go to state 8
    SYM_TAB    shift, and go to state 9
    EOL        shift, and go to state 10

    $end      reduce using rule 7 (delimiter_spaces_all)
    $end      [reduce using rule 11 (spaces)]
    $end      [reduce using rule 13 (tabs)]
    $end      [reduce using rule 15 (eols)]
    SF        reduce using rule 7 (delimiter_spaces_all)
    SF        [reduce using rule 11 (spaces)]
    SF        [reduce using rule 13 (tabs)]
    SF        [reduce using rule 15 (eols)]
    'a'       reduce using rule 7 (delimiter_spaces_all)
    'a'       [reduce using rule 11 (spaces)]
    'a'       [reduce using rule 13 (tabs)]
    'a'       [reduce using rule 15 (eols)]
    $default  reduce using rule 7 (delimiter_spaces_all)

    delimiter_spaces_all  go to state 11
    spaces                go to state 12
    tabs                  go to state 13
    eols                  go to state 14


state 6

    4 element: literal .

    $default  reduce using rule 4 (element)


state 7

    0 $accept: program $end .

    $default  accept


state 8

   11 spaces: .  [$end, SF, 'a']
   12       | . SYM_SPACE spaces
   12       | SYM_SPACE . spaces

    SYM_SPACE  shift, and go to state 8

    $default  reduce using rule 11 (spaces)

    spaces  go to state 15


state 9

   13 tabs: .  [$end, SF, 'a']
   14     | . SYM_TAB tabs
   14     | SYM_TAB . tabs

    SYM_TAB  shift, and go to state 9

    $default  reduce using rule 13 (tabs)

    tabs  go to state 16


state 10

   15 eols: .  [$end, SF, 'a']
   16     | . EOL eols
   16     | EOL . eols

    EOL  shift, and go to state 10

    $default  reduce using rule 15 (eols)

    eols  go to state 17


state 11

    2 elements: .  [$end]
    3         | . element delimiter_spaces_all elements
    3         | element delimiter_spaces_all . elements
    4 element: . literal
    5 literal: . 'a'
    6        | . SF

    SF   shift, and go to state 1
    'a'  shift, and go to state 2

    $default  reduce using rule 2 (elements)

    elements  go to state 18
    element   go to state 5
    literal   go to state 6


state 12

    8 delimiter_spaces_all: spaces .

    $default  reduce using rule 8 (delimiter_spaces_all)


state 13

    9 delimiter_spaces_all: tabs .

    $default  reduce using rule 9 (delimiter_spaces_all)


state 14

   10 delimiter_spaces_all: eols .

    $default  reduce using rule 10 (delimiter_spaces_all)


state 15

   12 spaces: SYM_SPACE spaces .

    $default  reduce using rule 12 (spaces)


state 16

   14 tabs: SYM_TAB tabs .

    $default  reduce using rule 14 (tabs)


state 17

   16 eols: EOL eols .

    $default  reduce using rule 16 (eols)


state 18

    3 elements: element delimiter_spaces_all elements .

    $default  reduce using rule 3 (elements)
